--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(moonloader PRIVATE
     sourcesdk::common
     sourcesdk::tier0
     sourcesdk::tier1
+    sourcesdk::steam_api
 
     efsw
     moonengine
