--- a/source/config.hpp.in
+++ b/source/config.hpp.in
@@ -6,6 +6,8 @@
 #define MOONLOADER_VERSION_MINOR @PROJECT_VERSION_MINOR@
 #define MOONLOADER_VERSION_PATCH @PROJECT_VERSION_PATCH@
 #define MOONLOADER_GIT_HASH "@GIT_HASH@"
+#define MOONLOADER_GIT_BRANCH "@GIT_BRANCH@"
+#define MOONLOADER_FULL_VERSION MOONLOADER_VERSION "-" MOONLOADER_GIT_BRANCH "." MOONLOADER_GIT_HASH
 #define MOONLOADER_URL "@PROJECT_HOMEPAGE_URL@"
 
 #endif // MOONLOADER_CONFIG_HPP
