--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,16 +40,16 @@ jobs:
             -DGARRYSMOD_COMMON_PATH="third-party/garrysmod_common" `
             -DAUTOINSTALL="." `
             -DBUILD_SHARED_LIBS=OFF `
-            -DGIT_BRANCH="%GIT_BRANCH%"
+            -DGIT_BRANCH="$env:GIT_BRANCH"
 
       - name: '[x32] Build project (Serverside)'
-        run: cmake --build build --config %BUILD_TYPE% -j -t moonloader
+        run: cmake --build build --config $env:BUILD_TYPE -j -t moonloader
 
       - name: '[x32] Configure project (Clientside)'
         run: cmake -B build -S . -DCLIENT_DLL=ON
 
       - name: '[x32] Build project (Clientside)'
-        run: cmake --build build --config %BUILD_TYPE% -j -t moonloader
+        run: cmake --build build --config $env:BUILD_TYPE -j -t moonloader
 
       - name: '[x64] Download garrysmod_common'
         uses: actions/checkout@v3
@@ -65,16 +65,16 @@ jobs:
             -DGARRYSMOD_COMMON_PATH="third-party/garrysmod_common64" `
             -DAUTOINSTALL="." `
             -DBUILD_SHARED_LIBS=OFF `
-            -DGIT_BRANCH="%GIT_BRANCH%"
+            -DGIT_BRANCH="$env:GIT_BRANCH"
 
       - name: '[x64] Build project (Serverside)'
-        run: cmake --build build64 --config %BUILD_TYPE% -j -t moonloader
+        run: cmake --build build64 --config $env:BUILD_TYPE -j -t moonloader
 
       - name: '[x64] Configure project (Clientside)'
         run: cmake -B build64 -S . -DCLIENT_DLL=ON
 
       - name: '[x64] Build project (Clientside)'
-        run: cmake --build build64 --config %BUILD_TYPE% -j -t moonloader
+        run: cmake --build build64 --config $env:BUILD_TYPE -j -t moonloader
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v3
