--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,3 +72,5 @@ jobs:
             ./*.dll
             ./*.pdb
           if-no-files-found: error
+          compression-level: 9
+          retention-days: 14
