Switched from lua 5.4 to lua5.1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "third-party/lua"]
-	path = third-party/lua
-	url = https://github.com/lubgr/lua-cmake
 [submodule "third-party/moonscript"]
 	path = third-party/moonscript
 	url = https://github.com/leafo/moonscript.git
@@ -10,3 +7,6 @@
 [submodule "third-party/Yuescript"]
 	path = third-party/Yuescript
 	url = https://github.com/pigpigyyy/Yuescript.git
+[submodule "third-party/lua5.1"]
+	path = third-party/lua5.1
+	url = https://github.com/lua/lua.git
