--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,5 +83,5 @@ jobs:
           name: ${{matrix.os}}-${{matrix.arch}}-${{env.BUILD_TYPE}}
           path: |
             ./*.dll
-            ./*.pdb
+          #  ./*.pdb
           if-no-files-found: error
