--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   GIT_BRANCH: ${{ github.ref_type == 'branch' && github.ref_name || 'release' }}
-  BUILD_TYPE: ${{ (github.ref_type != 'branch' || github.ref_name == 'main') && 'Release' || 'RelWithDebInfo' }}
+  BUILD_TYPE: RelWithDebInfo
 
 jobs:
   build:
