--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,4 @@
 cmake_minimum_required(VERSION 3.22)
-enable_language(CXX C)
-
-# Require C++ 17
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Enable -fPIC flag
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Enable IDE folders
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -20,6 +12,41 @@ if(APPLE)
         -Wno-deprecated-declarations
     )
 endif()
+
+# Allow CMake find custom package finders
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+# Get the latest abbreviated commit hash of the working branch
+execute_process(
+    COMMAND git log -1 --format=%h
+    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+    OUTPUT_VARIABLE GIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Get the current working branch
+if(NOT DEFINED GIT_BRANCH)
+    execute_process(
+        COMMAND git rev-parse --abbrev-ref HEAD
+        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+        OUTPUT_VARIABLE GIT_BRANCH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+endif()
+
+file(STRINGS "VERSION" GM_MOONLOADER_VERSION)
+project(gm_moonloader 
+    VERSION ${GM_MOONLOADER_VERSION}
+    LANGUAGES CXX C
+    HOMEPAGE_URL "https://github.com/Pika-Software/gm_moonloader"
+)
+
+# Require C++ 17
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Enable -fPIC flag
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Debug build is unsupported on MSVC
 if(MSVC)
@@ -45,34 +72,6 @@ add_subdirectory(third-party/lpeg)
 add_subdirectory(moonengine)
 
 # Include garrysmod_common
-find_garrysmod_common()
-if(NOT GARRYSMOD_COMMON_FOUND) # Check if garrysmod_common has been found
-    message(FATAL_ERROR "garrysmod_common not found")
-endif()
-
-# Get the latest abbreviated commit hash of the working branch
-execute_process(
-    COMMAND git log -1 --format=%h
-    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-    OUTPUT_VARIABLE GIT_HASH
-    OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-
-# Get the current working branch
-if(NOT DEFINED GIT_BRANCH)
-    execute_process(
-        COMMAND git rev-parse --abbrev-ref HEAD
-        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-        OUTPUT_VARIABLE GIT_BRANCH
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-    )
-endif()
-
-file(STRINGS "VERSION" GM_MOONLOADER_VERSION)
-project(gm_moonloader 
-    VERSION ${GM_MOONLOADER_VERSION}
-    LANGUAGES CXX 
-    HOMEPAGE_URL "https://github.com/Pika-Software/gm_moonloader"
-)
+find_package(GarrysmodCommon REQUIRED)
 
 add_subdirectory(source)
